--- a/macchine-prezzi/analisi.ipynb
+++ b/macchine-prezzi/analisi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -470,14 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index :  0\n",
       "year :  0\n",
       "make :  0\n",
       "model :  0\n",
@@ -505,15 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index\n",
-      "[     0      1      2 ... 558834 558835 558836]\n",
       "year\n",
       "[2015 2014 2013 2012 2011 2010 2009 2008 2007 2006 2005 2004 2003 2002\n",
       " 2001 2000 1999 1998 1996 1995 1997 1994 1993 1992 1991 1990]\n",
@@ -525,7 +522,13 @@
       " 'GMC' 'Ram' 'smart' 'Bentley' 'Pontiac' 'Saturn' 'Maserati' 'Mercury'\n",
       " 'HUMMER' 'Saab' 'Suzuki' 'Oldsmobile' 'Rolls-Royce' 'Isuzu' 'Plymouth'\n",
       " 'Tesla' 'Aston Martin' 'Geo' 'Fisker' 'Daewoo' 'Lamborghini' 'Lotus']\n",
-      "model\n",
+      "model\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Sorento' '3 Series' 'S60' '6 Series Gran Coupe' 'Altima' 'M5' 'Cruze'\n",
       " 'A4' 'Camaro' 'A6' 'Optima' 'Fusion' 'Q5' '6 Series' 'Impala' '5 Series'\n",
       " 'A3' 'XC70' 'SQ5' 'S5' 'Suburban' 'ELR' 'V60' 'X6' 'ILX' 'K900' 'Malibu'\n",
@@ -714,80 +717,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                sellingprice\n",
-      "                        mean\n",
-      "make                        \n",
-      "Acura           13104.780147\n",
-      "Aston Martin    55500.000000\n",
-      "Audi            20010.167638\n",
-      "BMW             21290.043863\n",
-      "Bentley         72713.333333\n",
-      "Buick           10588.182103\n",
-      "Cadillac        14733.198892\n",
-      "Chevrolet       11866.210434\n",
-      "Chrysler        10627.087887\n",
-      "Daewoo            450.000000\n",
-      "Dodge           10963.794342\n",
-      "FIAT             9927.416552\n",
-      "Ferrari        128852.941176\n",
-      "Fisker          46461.111111\n",
-      "Ford            14829.809413\n",
-      "GMC             16769.467831\n",
-      "Geo               576.562500\n",
-      "HUMMER          15404.606771\n",
-      "Honda           10942.928453\n",
-      "Hyundai         11062.017418\n",
-      "Infiniti        20562.796303\n",
-      "Isuzu            1774.162011\n",
-      "Jaguar          19429.853620\n",
-      "Jeep            14755.975736\n",
-      "Kia             11767.570824\n",
-      "Lamborghini    111500.000000\n",
-      "Land Rover      33225.287443\n",
-      "Lexus           20284.201652\n",
-      "Lincoln         17547.191433\n",
-      "Lotus           40800.000000\n",
-      "MINI            12389.426341\n",
-      "Maserati        43729.816514\n",
-      "Mazda           10228.570418\n",
-      "Mercedes-Benz   21314.872216\n",
-      "Mercury          3996.944621\n",
-      "Mitsubishi       8035.456979\n",
-      "Nissan          11745.442885\n",
-      "Oldsmobile        953.773585\n",
-      "Plymouth        11845.312500\n",
-      "Pontiac          3814.864609\n",
-      "Porsche         38932.109767\n",
-      "Ram             25257.458210\n",
-      "Rolls-Royce    153456.250000\n",
-      "Saab             3616.346154\n",
-      "Saturn           3436.381323\n",
-      "Scion            9736.213592\n",
-      "Subaru          15583.418173\n",
-      "Suzuki           4009.769703\n",
-      "Tesla           67054.347826\n",
-      "Toyota          12422.457197\n",
-      "Volkswagen       9374.792022\n",
-      "Volvo           10927.677482\n",
-      "smart            6301.603499\n"
+      "                 make  sellingprice\n",
+      "0               Acura           NaN\n",
+      "   mean           NaN  13104.780147\n",
+      "1        Aston Martin           NaN\n",
+      "   mean           NaN  55500.000000\n",
+      "2                Audi           NaN\n",
+      "...               ...           ...\n",
+      "50 mean           NaN   9374.792022\n",
+      "51              Volvo           NaN\n",
+      "   mean           NaN  10927.677482\n",
+      "52              smart           NaN\n",
+      "   mean           NaN   6301.603499\n",
+      "\n",
+      "[106 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "grouped_df = df_test.groupby('make').agg({'sellingprice':['mean']})\n",
-    "print(grouped_df)"
+    "grouped_df = df_test.groupby('make').agg({'sellingprice':['mean']}).reset_index()\n",
+    "print(grouped_df.stack())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
