--- a/es-python/macchine-prezzi/analisi.ipynb
+++ b/es-python/macchine-prezzi/analisi.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-=======
    "execution_count": 126,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -76,16 +72,13 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "df=pd.read_csv(r\"car_prices.csv\")\n",
-    "print(df)"
+    "print(df)\n",
+    "#culo"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-=======
    "execution_count": 127,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -105,9 +98,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-=======
    "execution_count": 128,
    "metadata": {},
    "outputs": [
@@ -298,7 +288,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -372,11 +361,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-=======
    "execution_count": 130,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -446,11 +431,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-=======
    "execution_count": 131,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -484,11 +465,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-=======
    "execution_count": 132,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
@@ -506,13 +483,7 @@
       " 'GMC' 'Ram' 'smart' 'Bentley' 'Pontiac' 'Saturn' 'Maserati' 'Mercury'\n",
       " 'HUMMER' 'Saab' 'Suzuki' 'Oldsmobile' 'Rolls-Royce' 'Isuzu' 'Plymouth'\n",
       " 'Tesla' 'Aston Martin' 'Geo' 'Fisker' 'Daewoo' 'Lamborghini' 'Lotus']\n",
-      "model\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "model\n",
       "['Sorento' '3 Series' 'S60' '6 Series Gran Coupe' 'Altima' 'M5' 'Cruze'\n",
       " 'A4' 'Camaro' 'A6' 'Optima' 'Fusion' 'Q5' '6 Series' 'Impala' '5 Series'\n",
       " 'A3' 'XC70' 'SQ5' 'S5' 'Suburban' 'ELR' 'V60' 'X6' 'ILX' 'K900' 'Malibu'\n",
@@ -701,33 +672,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
    "execution_count": 133,
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "                 make  sellingprice\n",
-      "0               Acura           NaN\n",
-      "   mean           NaN  13104.780147\n",
-      "1        Aston Martin           NaN\n",
-      "   mean           NaN  55500.000000\n",
-      "2                Audi           NaN\n",
-      "...               ...           ...\n",
-      "50 mean           NaN   9374.792022\n",
-      "51              Volvo           NaN\n",
-      "   mean           NaN  10927.677482\n",
-      "52              smart           NaN\n",
-      "   mean           NaN   6301.603499\n",
-      "\n",
-      "[106 rows x 2 columns]\n"
-=======
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 472325 entries, 0 to 472324\n",
       "Data columns (total 16 columns):\n",
@@ -751,15 +702,10 @@
       " 15  saledate      472325 non-null  object \n",
       "dtypes: float64(4), int64(1), object(11)\n",
       "memory usage: 57.7+ MB\n"
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
      ]
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "grouped_df = df_test.groupby('make').agg({'sellingprice':['mean']}).reset_index()\n",
-    "print(grouped_df.stack())"
-=======
     "df_test.info()"
    ]
   },
@@ -2404,12 +2350,11 @@
     "grouped_df['categ']=grouped_df.apply(cat_make(grouped_df),axis=1)\n",
     "print(grouped_df)\n",
     "\n"
->>>>>>> eb43c3df2bf6d8ab11bd7fa38b3d5a0702b4a5f1
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
