--- a/infortuni/analisi-infortuni.ipynb
+++ b/infortuni/analisi-infortuni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "Index([832], dtype='int64')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,24 +293,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Player_Age                    NaN\n",
-       "Player_Weight                  36\n",
-       "Player_Height           66.462635\n",
-       "Previous_Injuries             NaN\n",
-       "Training_Intensity              0\n",
-       "Recovery_Time            0.131687\n",
-       "Likelihood_of_Injury            1\n",
-       "Unnamed: 7                    1.0\n",
+       "'Player_Age'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Player_Age                     NaN\n",
+       "Player_Weight                   36\n",
+       "Player_Height            66.462635\n",
+       "Previous_Injuries       196.774629\n",
+       "Training_Intensity               0\n",
+       "Recovery_Time             0.131687\n",
+       "Likelihood_of_Injury             1\n",
+       "Unnamed: 7                     1.0\n",
        "Name: 832, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,8 +340,249 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "shift a sinistra della riga sbagliata di 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player_Age                      36\n",
+      "Player_Weight            66.462635\n",
+      "Player_Height           196.774629\n",
+      "Previous_Injuries                0\n",
+      "Training_Intensity        0.131687\n",
+      "Recovery_Time                    1\n",
+      "Likelihood_of_Injury           1.0\n",
+      "Unnamed: 7                     1.0\n",
+      "Name: 832, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx,i in enumerate(df.columns):\n",
+    "    if idx!=0:\n",
+    "        df.loc[832,df.columns[idx-1]]=df.loc[832,df.columns[idx]]\n",
+    "\n",
+    "print(df.loc[832])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "drop colonna fantasma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player_Age</th>\n",
+       "      <th>Player_Weight</th>\n",
+       "      <th>Player_Height</th>\n",
+       "      <th>Previous_Injuries</th>\n",
+       "      <th>Training_Intensity</th>\n",
+       "      <th>Recovery_Time</th>\n",
+       "      <th>Likelihood_of_Injury</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>66.251933</td>\n",
+       "      <td>175.732429</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.457929</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>70.996271</td>\n",
+       "      <td>174.58165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.226522</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>80.093781</td>\n",
+       "      <td>186.329618</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.61397</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28</td>\n",
+       "      <td>87.473271</td>\n",
+       "      <td>175.50424</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.252858</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "      <td>ඞ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>23</td>\n",
+       "      <td>99.14791</td>\n",
+       "      <td>165.290912</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.077857</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>23</td>\n",
+       "      <td>75.799934</td>\n",
+       "      <td>178.132281</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.955448</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>20</td>\n",
+       "      <td>78.479061</td>\n",
+       "      <td>173.823908</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.246961</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>24</td>\n",
+       "      <td>66.915802</td>\n",
+       "      <td>197.616889</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.859645</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>36</td>\n",
+       "      <td>71.847352</td>\n",
+       "      <td>177.171535</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.16881</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Player_Age Player_Weight Player_Height Previous_Injuries  \\\n",
+       "0           24     66.251933    175.732429                 1   \n",
+       "1           37     70.996271     174.58165                 0   \n",
+       "2           32     80.093781    186.329618                 0   \n",
+       "3           28     87.473271     175.50424               one   \n",
+       "4            ඞ             ඞ             ඞ                 ඞ   \n",
+       "..         ...           ...           ...               ...   \n",
+       "995         23      99.14791    165.290912                 0   \n",
+       "996         23     75.799934    178.132281                 1   \n",
+       "997         20     78.479061    173.823908                 0   \n",
+       "998         24     66.915802    197.616889                 1   \n",
+       "999         36     71.847352    177.171535                 0   \n",
+       "\n",
+       "    Training_Intensity Recovery_Time Likelihood_of_Injury  \n",
+       "0             0.457929             5                    0  \n",
+       "1             0.226522             6                    1  \n",
+       "2              0.61397             2                    1  \n",
+       "3             0.252858             4                    1  \n",
+       "4                    ඞ             ඞ                    ඞ  \n",
+       "..                 ...           ...                  ...  \n",
+       "995           0.077857             3                    1  \n",
+       "996           0.955448             1                    0  \n",
+       "997           0.246961             1                    1  \n",
+       "998           0.859645             2                    0  \n",
+       "999            0.16881             1                    0  \n",
+       "\n",
+       "[1000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=df.drop(['Unnamed: 7'],axis=1 )\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check e fixing dei valori di previous injuries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -329,26 +590,238 @@
      "output_type": "stream",
      "text": [
       "Previous_Injuries\n",
-      "1                  507\n",
-      "0                  469\n",
-      "one                  5\n",
-      "zero                 5\n",
-      "#                    4\n",
-      "ඞ                    3\n",
-      "196.77462930313      1\n",
+      "1       507\n",
+      "0       470\n",
+      "one       5\n",
+      "zero      5\n",
+      "#         4\n",
+      "ඞ         3\n",
       "Name: count, dtype: int64\n",
       "Previous_Injuries\n",
       "1.0    512\n",
-      "0.0    474\n",
+      "0.0    475\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "#print(df.Previous_Injuries.value_counts())\n",
-    "#df['Previous_Injuries'] = df['Previous_Injuries'].map({'one': 1, 'zero': 0,'ඞ': np.nan,'#':np.nan,1:1,0:0})\n",
-    "#print(df.Previous_Injuries.value_counts())"
+    "print(df.Previous_Injuries.value_counts())\n",
+    "df['Previous_Injuries'] = df['Previous_Injuries'].map({'one': 1, 'zero': 0,'ඞ': np.nan,'#':np.nan,1:1,0:0})\n",
+    "print(df.Previous_Injuries.value_counts())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check non numerical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\filip\\AppData\\Local\\Temp\\ipykernel_11484\\286339583.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  nn_map = df.applymap(np.isreal)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player_Age</th>\n",
+       "      <th>Player_Weight</th>\n",
+       "      <th>Player_Height</th>\n",
+       "      <th>Previous_Injuries</th>\n",
+       "      <th>Training_Intensity</th>\n",
+       "      <th>Recovery_Time</th>\n",
+       "      <th>Likelihood_of_Injury</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Player_Age  Player_Weight  Player_Height  Previous_Injuries  \\\n",
+       "0          True           True           True               True   \n",
+       "1          True           True           True               True   \n",
+       "2          True           True           True               True   \n",
+       "3          True           True           True               True   \n",
+       "4         False          False          False               True   \n",
+       "..          ...            ...            ...                ...   \n",
+       "995        True           True           True               True   \n",
+       "996        True           True           True               True   \n",
+       "997        True           True           True               True   \n",
+       "998        True           True           True               True   \n",
+       "999        True           True           True               True   \n",
+       "\n",
+       "     Training_Intensity  Recovery_Time  Likelihood_of_Injury  \n",
+       "0                  True           True                  True  \n",
+       "1                  True           True                  True  \n",
+       "2                  True           True                  True  \n",
+       "3                  True           True                  True  \n",
+       "4                 False          False                 False  \n",
+       "..                  ...            ...                   ...  \n",
+       "995                True           True                  True  \n",
+       "996                True           True                  True  \n",
+       "997                True           True                  True  \n",
+       "998                True           True                  True  \n",
+       "999                True           True                  True  \n",
+       "\n",
+       "[1000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn_map = df.applymap(np.isreal)\n",
+    "nn_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
