--- a/metodi_imp.ipynb
+++ b/metodi_imp.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "funzione per ricevere l'index di funzioni con certe condizioni"
+   ]
   },
   {
    "cell_type": "code",
@@ -96,6 +98,66 @@
    "outputs": [],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "drop di una colonna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df=df.drop(['Unnamed: 7'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "drop certe righe dato l'index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df=df.drop([113,4,223])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "trasformazione di oggetti a numeri con coercing(NA se non riesce)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df['Player_Age'] =pd.to_numeric(df['Player_Age'],errors='coerce')"
    ]
   },
   {
