--- a/metodi_imp.ipynb
+++ b/metodi_imp.ipynb
@@ -234,6 +234,8 @@
     "X = df_test[['Player_Age','Player_Weight','Player_Height','Previous_Injuries','Training_Intensity','Recovery_Time']]\n",
     "y = df_test['Likelihood_of_Injury']\n",
     "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
     "predictions = model.predict(X)\n",
     "r2 = r2_score(y,predictions)\n",
     "rmse = mean_squared_error(y, predictions, squared=False)\n",
