--- a/metodi_imp.ipynb
+++ b/metodi_imp.ipynb
@@ -164,6 +164,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "quando fit ti da errore: si aspetta un array in 2 dimensioni aggiungi values-reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pt.fit(df.balance.values.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "esempio importazione"
    ]
   },
