--- a/metodi_imp.ipynb
+++ b/metodi_imp.ipynb
@@ -234,6 +234,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "one hot encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "one_hot = pd.get_dummies(df['B'])\n",
+    "\n",
+    "df = df.drop('B',axis = 1)\n",
+    "\n",
+    "df = df.join(one_hot)\n",
+    "df  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "esempio regressione lineare con metodo minimi quadrati"
    ]
   },
