--- a/bank_target_marketing/Bank_Target_Marketing.ipynb
+++ b/bank_target_marketing/Bank_Target_Marketing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[56373 rows x 17 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -570,13 +570,153 @@
        "balance  0.10125  1.00000"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[['age','balance']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>balance</td>     <th>  R-squared (uncentered):</th>       <td>   0.178</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared (uncentered):</th>  <td>   0.178</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>           <td>1.223e+04</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Wed, 27 Mar 2024</td> <th>  Prob (F-statistic):</th>            <td>  0.00</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>11:56:30</td>     <th>  Log-Likelihood:    </th>          <td>-5.3257e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td> 56373</td>      <th>  AIC:               </th>           <td>1.065e+06</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td> 56372</td>      <th>  BIC:               </th>           <td>1.065e+06</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>               <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>               <td> </td>     \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "   <td></td>      <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>age</th> <td>   33.6795</td> <td>    0.305</td> <td>  110.599</td> <td> 0.000</td> <td>   33.083</td> <td>   34.276</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>80013.621</td> <th>  Durbin-Watson:     </th>   <td>   1.936</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>   <th>  Jarque-Bera (JB):  </th> <td>43877760.202</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>           <td> 8.252</td>   <th>  Prob(JB):          </th>   <td>    0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>       <td>138.676</td>  <th>  Cond. No.          </th>   <td>    1.00</td>  \n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] R² is computed without centering (uncentered) since the model does not contain a constant.<br/>[2] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &     balance      & \\textbf{  R-squared (uncentered):}      &      0.178    \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared (uncentered):} &      0.178    \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       }          &  1.223e+04    \\\\\n",
+       "\\textbf{Date:}             & Wed, 27 Mar 2024 & \\textbf{  Prob (F-statistic):}          &      0.00     \\\\\n",
+       "\\textbf{Time:}             &     11:56:30     & \\textbf{  Log-Likelihood:    }          & -5.3257e+05   \\\\\n",
+       "\\textbf{No. Observations:} &       56373      & \\textbf{  AIC:               }          &  1.065e+06    \\\\\n",
+       "\\textbf{Df Residuals:}     &       56372      & \\textbf{  BIC:               }          &  1.065e+06    \\\\\n",
+       "\\textbf{Df Model:}         &           1      & \\textbf{                     }          &               \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     }          &               \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "             & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{age} &      33.6795  &        0.305     &   110.599  &         0.000        &       33.083    &       34.276     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       & 80013.621 & \\textbf{  Durbin-Watson:     } &      1.936    \\\\\n",
+       "\\textbf{Prob(Omnibus):} &    0.000  & \\textbf{  Jarque-Bera (JB):  } & 43877760.202  \\\\\n",
+       "\\textbf{Skew:}          &    8.252  & \\textbf{  Prob(JB):          } &       0.00    \\\\\n",
+       "\\textbf{Kurtosis:}      &  138.676  & \\textbf{  Cond. No.          } &       1.00    \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] R² is computed without centering (uncentered) since the model does not contain a constant. \\newline\n",
+       " [2] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                 OLS Regression Results                                \n",
+       "=======================================================================================\n",
+       "Dep. Variable:                balance   R-squared (uncentered):                   0.178\n",
+       "Model:                            OLS   Adj. R-squared (uncentered):              0.178\n",
+       "Method:                 Least Squares   F-statistic:                          1.223e+04\n",
+       "Date:                Wed, 27 Mar 2024   Prob (F-statistic):                        0.00\n",
+       "Time:                        11:56:30   Log-Likelihood:                     -5.3257e+05\n",
+       "No. Observations:               56373   AIC:                                  1.065e+06\n",
+       "Df Residuals:                   56372   BIC:                                  1.065e+06\n",
+       "Df Model:                           1                                                  \n",
+       "Covariance Type:            nonrobust                                                  \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "age           33.6795      0.305    110.599      0.000      33.083      34.276\n",
+       "==============================================================================\n",
+       "Omnibus:                    80013.621   Durbin-Watson:                   1.936\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         43877760.202\n",
+       "Skew:                           8.252   Prob(JB):                         0.00\n",
+       "Kurtosis:                     138.676   Cond. No.                         1.00\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
+       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "lin_reg= sm.OLS(df.balance,df.age)\n",
+    "reg1=lin_reg.fit()\n",
+    "reg1.summary()"
    ]
   },
   {
