life_expectancy semi concluso

--- a/metodi_imp.ipynb
+++ b/metodi_imp.ipynb
@@ -289,6 +289,31 @@
     "print('The r2 is: ', r2)\n",
     "print('The rmse is: ', rmse)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "statsmodels regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "lin_reg= sm.OLS(df['GDP'],df['Life expectancy '])\n",
+    "reg1=lin_reg.fit()\n",
+    "df['predictions']= reg1.predict()\n",
+    "reg1.summary()"
+   ]
   }
  ],
  "metadata": {
